# stylegan2-pytorch

./: Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
